# PixelGame

./: CMakeLists.txt  LICENSE  README.md
assets/: map1
include/: actor.h  data.h  enemy.h  game.h  map.h  other.h  player.h  static.h
src/: enemy.cc  game.cc  main.cc  map.cc  other.cc  player.cc  static.cc
